--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    .App-header {
+    text-align: center;
+    min-height: 20vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color:black;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
+    .App-username {
+    top: 30px;
+    left: 675px;
+    }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+    .App-password {
+    top: 100px;
+    left: 465px;
+    }
+    .App-logginButton {
+      display: flex;
+      position: relative;
+      padding: 10px 85px;
+      margin-left: 675px ;
+      margin-top: 110px;
+    }
+
+    .App-createAccButton {
+      padding: 10px 80px;
+      display: flex;
+      margin-left: 675px ;
+      margin-top: 10px;
+      
+    }
+
+    .Register-createAccButton {
+      padding: 10px 58px;
+      display: flex;
+      margin-left: 675px ;
+      margin-top: 110px;
+      
+    }
+
+    .Register-backButton {
+      display: flex;
+      position: relative;
+      padding: 10px 89px;
+      margin-left: 675px ;
+      margin-top: 10px;
+    }
+
+    
+
+    
+
+
+  
+  
