--- a/src/App.css
+++ b/src/App.css
@@ -39,16 +39,45 @@
       padding: 10px 58px;
       display: flex;
       margin-left: 675px ;
-      margin-top: 110px;
+      margin-top: 300px;
+      width: 174px;
       
     }
 
     .Register-backButton {
       display: flex;
       position: relative;
-      padding: 10px 89px;
+      padding: 10px 71px;
       margin-left: 675px ;
       margin-top: 10px;
+    }
+
+    .container {
+      position: relative;
+    }
+
+    .username-field {
+      position: absolute;
+      top: 210px; 
+      left: 675px; 
+      width: 166px; 
+      height: 30px; 
+    }
+
+    .password-field {
+      position: absolute;
+      top: 255px; 
+      left: 675px; 
+      width: 166px; 
+      height: 30px; 
+    }
+
+    .register-header {
+      position: absolute;
+      top: 100px; 
+      left: 675px; 
+      font-size: 46px;
+      font-family: Arial, sans-serif;
     }
 
     
