sign out button + getDate

--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,11 @@
       left: 306px;
     }
 
+    .logOut-Button {
+      top: -430px;
+      left: 1206px;
+    }
+
     .container {
       position: relative;
     }
