--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,11 @@
       top: 50px;
     }
 
+    .appointments-container {
+      margin-top: -350px;
+      margin-left: 550px;
+    }
+
    
 
     
