add new appointment + timePicker

--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,13 @@
       background-color: #f0f0f0; 
     }
 
+    .custom-time-picker {
+      margin-top: -350px;
+      margin-left: 550px;
+    }
+
+
+
    
 
     
